CHANGES_7.0       2021/05/17

The changes from 6.9 to 7.0 are shown below.

* Already changed

    + Defined the OnigPos type (== ptrdiff_t).

    + Changed the return value of onig_search(), onig_search_with_param(), onig_match() and onig_match_with_param() from int to OnigPos.

    + Changed the argument value of onig_regset_search(), onig_regset_search_with_param() and onig_error_code_to_str() from int to OnigPos.

    + POSIX API: Changed the regoff_t type from int to OnigPos

    + Move the definition of OnigEncodingType structure from oniguruma.h to regenc.h

    + Removed from oniguruma.h
      ONIGENC_IS_MBC_WORD_ASCII()
      ONIGENC_MBC_CASE_FOLD()
      ONIGENC_LEFT_ADJUST_CHAR_HEAD()
      ONIGENC_IS_VALID_MBC_STRING()
      ONIGENC_APPLY_ALL_CASE_FOLD()
      ONIGENC_GET_CASE_FOLD_CODES_BY_STR()
      ONIGENC_STEP_BACK()
      ONIGENC_MBC_ENC_LEN()
      ONIGENC_MBC_MAXLEN_DIST()
      ONIGENC_PROPERTY_NAME_TO_CTYPE()
      ONIGENC_GET_CTYPE_CODE_RANGE()

    + change macro to function in oniguruma.h
      onig_enc_len()           -> onig_enc_len()
      ONIGENC_IS_UNDEF()       -> onigenc_is_undef()
      ONIGENC_IS_SINGLEBYTE()  -> onigenc_is_singlebyte()
      ONIGENC_IS_MBC_HEAD()    -> onigenc_is_mbc_head()
      ONIGENC_IS_MBC_ASCII()   -> onigenc_is_mbc_ascii()
      ONIGENC_IS_CODE_ASCII()  -> onigenc_is_code_ascii()
      ONIGENC_IS_MBC_WORD()    -> onigenc_is_mbc_word()
      ONIGENC_NAME()           -> onigenc_name()
      ONIGENC_IS_ALLOWED_REVERSE_MATCH() -> onigenc_is_allowed_reverse_match()
      ONIGENC_MBC_MAXLEN()     -> onigenc_mbc_maxlen()
      ONIGENC_MBC_MINLEN()     -> onigenc_mbc_minlen()
      ONIGENC_IS_MBC_NEWLINE() -> onigenc_is_mbc_newline()
      ONIGENC_MBC_TO_CODE()    -> onigenc_mbc_to_code()
      ONIGENC_CODE_TO_MBCLEN() -> onigenc_code_to_mbclen()
      ONIGENC_CODE_TO_MBC()    -> onigenc_code_to_mbc()
      ONIGENC_IS_CODE_CTYPE()  -> onigenc_is_code_ctype()


* Will change
