@@ -1,4 +1,4 @@
-README  2018/04/05
+README  2021/06/23
 
 Oniguruma  ----   (C) K.Kosako
 
@@ -146,7 +146,6 @@ Source Files
   regcomp.c          compiling and optimization functions
   regenc.c           character encodings framework.
   regerror.c         error message function
-  regext.c           extended API functions. (deluxe version API)
   regexec.c          search and match functions
   regparse.c         parsing functions.
   regsyntax.c        pattern syntax functions and built-in syntax definitions.
