@@ -1,4 +1,4 @@
-CHANGES_7.0       2021/05/17
+CHANGES_7.0       2021/06/23
 
 The changes from 6.9 to 7.0 are shown below.
 
@@ -14,7 +14,7 @@ The changes from 6.9 to 7.0 are shown below.
 
     + Move the definition of OnigEncodingType structure from oniguruma.h to regenc.h
 
-    + Removed from oniguruma.h
+    + Removed macros from oniguruma.h
       ONIGENC_IS_MBC_WORD_ASCII()
       ONIGENC_MBC_CASE_FOLD()
       ONIGENC_LEFT_ADJUST_CHAR_HEAD()
@@ -44,6 +44,9 @@ The changes from 6.9 to 7.0 are shown below.
       ONIGENC_CODE_TO_MBCLEN() -> onigenc_code_to_mbclen()
       ONIGENC_CODE_TO_MBC()    -> onigenc_code_to_mbc()
       ONIGENC_IS_CODE_CTYPE()  -> onigenc_is_code_ctype()
+
+    + Removed deprecated functions
+      onig_init()
 
 
 * Will change
